# pi-container

./: .containerignore  .env.example  .gitattributes  .gitignore  .gitignore.example  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  LICENSE  README.md  build.sh  entrypoint.sh  mkdocs.yml  pyproject.toml  run.sh
.github/scripts/: generate_index.py
.github/workflows/: ci.yml  gh-pages.yml
.github/workflows/scripts/: generate_coverage_badge.py  validate_seed_models.py  validate_versions.py
.pi-container/: allowlist.yaml  config.yaml  flow_export.yaml  tmpfs.yaml
.pi-container/agent/: AGENTS.md  config.json  entrypoint.sh  models.json  settings.json
.pi-container/chat-templates/Ornith-1.0-35B-FP8/: chat_template.jinja
.pi-container/dependencies/pi/: commands.sh
.pi-container/dependencies/root/: commands.sh
.pi/skills/release/: SKILL.md
.pi/skills/release/scripts/: release.sh
docs/: architecture.md  configuration.md  development.md  getting-started.md  index.md  releases.md  robots.txt
docs/assets/: .gitignore.example
docs/overrides/: main.html
docs/proxy/: addon-development.md  allowlist.md  flow-export.md  overview.md  token-replacer.md
docs/setups/ornith-1.0-35b-Q6_K/: README.md
llama-server/: README.md
llama-server/chat-templates/Ornith-1.0-35B-FP8/: README.md
llama-server/chat-templates/gemma-4-26B-A4B-it/: README.md
pi-coding-agent/: Containerfile  entrypoint.sh
pi-coding-agent-proxy/: Caddyfile  Containerfile  README.md  entrypoint.sh  requirements-pinned.txt
pi-coding-agent-proxy/addons/: README.md
pi-coding-agent-proxy/addons/allowlist/: README.md  allowlist.py  allowlist_config.yaml
pi-coding-agent-proxy/addons/allowlist/tests/: test_allowlist.py
pi-coding-agent-proxy/addons/flow_export/: README.md  flow_export.py
pi-coding-agent-proxy/addons/token_replacer/: README.md  token_replacer.py  token_replacer_config.yaml
pi-coding-agent-proxy/addons/token_replacer/tests/: test_token_replacer.py
pi-coding-agent/default/: config.yaml  egress.yaml  flow_export.yaml  tmpfs.yaml  token_replacer.yaml
pi-coding-agent/default/agent/: AGENTS.md  models.json  settings.json
pi-coding-agent/default/dependencies/pi/: commands.sh
pi-coding-agent/default/dependencies/root/: commands.sh
pi-coding-agent/home/.pi/agent/: models.json  settings.json
pi-coding-agent/home/.pi/agent/extensions/terminal-beautifier/: README.md  index.ts  latex-symbols.json
pi-coding-agent/setups/Qwen3.6-35B-A3B-UD-Q6_K_XL/: README.md  models.json
pi-coding-agent/setups/gemma-4-26b-a4b-it-qat-GGUF/: README.md  models.json
pi-home/: substitute-models.sh
pi-home/.pi/agent/: .pi_ignore  AGENTS.md  models.json  models.json.tpl  settings.json
pi-home/.pi/agent/extensions/: diff-edit.ts
scripts/: build.py  build.sh  generate_coverage_badge.py  run.py  run.sh  run_refactored.py  run_refactored_2nd.py  util.py
src/: build.py  config.py  config_schema.py  flow_export.py  models.py  network.py  run.py  runtimes.py  schema_common.py  server.py  template_paths.py  util.py  version.py
src/tests/: conftest.py  test_build.py  test_config_schema.py  test_flow_export.py  test_models.py  test_network.py  test_run.py  test_runtimes.py  test_server.py  test_util.py
transparent-proxy/: Containerfile  entrypoint.sh  redsocks.conf
