[project]
name = "pi-container"
version = "0.2.0"
description = "Containerized environment for running the pi-coding-agent with local LLM inference"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
proxy = [
    "mitmproxy>=12.2.3",
]
src = [
    "huggingface_hub>=1.21.0",
]
docs = [
    "mkdocs-material>=9.7.6",
]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.uv]
package = false
override-dependencies = [
    "msgpack>=1.2.1",
    "tornado>=6.5.6",
]

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
    "pi-coding-agent-proxy/addons/allowlist/tests",
    "pi-coding-agent-proxy/addons/token_replacer/tests",
]

[tool.coverage.run]
branch = true
source = [
    "src",
    "pi-coding-agent-proxy/addons/allowlist",
    "pi-coding-agent-proxy/addons/token_replacer",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py314"
line-length = 120
include = [
    "src/**/*.py",
    "pi-coding-agent-proxy/addons/allowlist/**/*.py",
    "pi-coding-agent-proxy/addons/token_replacer/**/*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E402",  # module level import not at top (intentional: sys.dont_write_bytecode)
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = [
    "util", "config", "runtimes", "models", "server", "network",
    "allowlist", "token_replacer",  # pi-coding-agent-proxy/addons
]
